# hackanomous

./: .gitignore  .prettierrc  AGENTS.md  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  vite.config.ts
.agents/skills/frontend-design/: SKILL.md
app/: api.py  config.py  database.py  oauth.py  server.py
scripts/regions/: akamai_datacenter_import.csv  alibaba_datacenter_import.csv  aws_datacenter_import.csv  digitalocean_datacenter_import.csv  hetzner_datacenter_import.csv  ovhcloud_datacenter_import.csv  supabase_region_import.csv  tencent_datacenter_import.csv
src/: App.svelte  app.css
src/lib/: Event.svelte  Question.svelte
