[project]
name = "hackanomous"
version = "0.1.0"
description = "A Hack Club YSWS where you build your AI skills"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pyjwt[crypto]>=2.12.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.44.0",
]
